# pg_pump

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  pg_pump.toml
sql_scripts/: postgres_create.sql  sql_server_create.sql
src/: .env  datatypes.txt  main.rs  roadmap.txt  sql_server.rs  version.rs
src/clap_parser/: mod.rs
src/config_provider/: mod.rs
src/db_seeder/: mod.rs
src/postgres_consumer/: mod.rs  postgres_consumer.rs
src/postgres_provider/: mod.rs  postgres_provider.rs
src/settings/: mod.rs  settings.rs  settings_provider.rs
src/shared/: db_provider.rs  mod.rs  pg_pump_column_type.rs  postgres_column_types.rs
src/sql_server_provider/: mod.rs  sql_server_provider.rs
