[package]
name = "pg_pump"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
anyhow = "1.0"
tiberius = "0.12"
bb8 = "0.9"
bb8-tiberius = "0.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
colored = "3.0"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
rand = "0.9.2"