[package]
name = "pg_pump"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
tiberius = { version = "0.12", features = ["time", "rust_decimal"] }
bb8 = "0.9"
bb8-tiberius = "0.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
colored = "3.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3"] }
futures-util = "0.3"
bb8-postgres = "0.9"
dotenvy = "0.15"
rust_decimal = { version = "1.39.0", features = ["db-tokio-postgres"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
time = "0.3"
flume = "0.12"
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
rand = "0.9.2"
